<resources>
    <string name="app_name">AskTheRabbi</string>
    <string name="welcome">Welcome</string>
    <string name="choose_how_continue">Choose how to continue</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="guest">Guest</string>
    <string name="create_new_account">Create new account</string>
    <string name="username_st">Username</string>
    <string name="email_st">email</string>
    <string name="password_st">password</string>
    <string name="confirm_password_st">confirm password</string>
    <string name="resetPass">Reset Password</string>
    <string name="your_email">Your email</string>
    <string name="resetPasswordSt">By clicking RESET, you will receive an email to reset you password</string>
    <string name="all_fileds_are_required">All fileds are required</string>
    <string name="please_checkyoumail">Please check your Email</string>
    <string name="password_must_be">Password must be at least 6 characters</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="registered_success">Registered success</string>
    <string name="forget_password">Forget password?</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="select_choice">Choose image source</string>
    <string name="from_gallery">From gallery</string>
    <string name="from_camera">From camera</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="uploading_photo">Uploading photo</string>
    <string name="image_sucsses">Image sucsses</string>
    <string name="failed">Failed! something is wrong</string>
    <string name="users">Users</string>
    <string name="chat">Chat</string>
    <string name="groups">Groups</string>
    <string name="torhaLesson">Lessons</string>
    <string name="change_details_sucsses">Your new details saved</string>

    <string name="google_maps_key">AIzaSyCyPE3ZJPfBLByePAYP_KoBwrOCtavGYOE</string>
    <string name="send_location">Send location</string>
    <string name="sent_location_mess">Sent location</string>
    <string name="appropriate_permissions">Appropriate permissions are required</string>
    <string name="pdf">PDF</string>
    <string name="empty_mess">You can\'t sent empty message</string>
    <string name="uploading">Uploading</string>
    <string name="sent_file_mess">Sent file</string>
    <string name="sent_photo_mess">Sent photo</string>
    <string name="new_message">New message</string>
    <string name="type_message">Type a message...</string>
    <string name="seen">seen</string>
    <string name="delivered">delivered</string>
    <string name="no_message">no message</string>
    <string name="no_image_selected">No image selected</string>
    <string name="torah_lesson_list">Loading torah lessons list</string>
    <string name="torah_lesson_with">Torah lesson with:</string>
    <string name="subject">Subject:</string>
    <string name="location">Location:</string>
    <string name="number_participants">Participants:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="search">Search</string>




    //Cities
    <string name="city1">Ofakim</string>
    <string name="city2">Or Yehuda</string>
    <string name="city3">Eilat</string>
    <string name="city4">Elad</string>
    <string name="city5">Ariel</string>
    <string name="city6">Ashdod</string>
    <string name="city7">Ashkelon</string>
    <string name="city8">Beer Sheva</string>
    <string name="city9">Beit Shean</string>
    <string name="city10">Beit Shemesh</string>
    <string name="city11">Betar Illit</string>
    <string name="city12">Bnei Berak</string>
    <string name="city13">Bat Yam</string>
    <string name="city14">Givatayim</string>
    <string name="city15">Dimona</string>
    <string name="city16">Hod HaSharon</string>
    <string name="city17">Herzliya</string>
    <string name="city18">Hadera</string>
    <string name="city19">Holon</string>
    <string name="city20">Haifa</string>
    <string name="city21">Tiberias</string>
    <string name="city22">Tira</string>
    <string name="city23">Tirat Carmel</string>
    <string name="city24">Yavne</string>
    <string name="city25">Yehud-Monosson</string>
    <string name="city26">Yokneam</string>
    <string name="city27">Jerusalem</string>
    <string name="city28">Kfar Sava</string>
    <string name="city29">Karmiel</string>
    <string name="city30">Lod</string>
    <string name="city31">Migdal HaEmek</string>
    <string name="city32">Modiin</string>
    <string name="city33">Maale Adumim</string>
    <string name="city34">Maalot Tarshiha</string>
    <string name="city35">Nahariya</string>
    <string name="city36">Nof Hagalil</string>
    <string name="city37">Nes Ziona</string>
    <string name="city38">Nazareth</string>
    <string name="city39">Nesher</string>
    <string name="city40">Netivot</string>
    <string name="city41">Netanya</string>
    <string name="city42">Akko</string>
    <string name="city43">Afula</string>
    <string name="city44">Arad</string>
    <string name="city45">Petah Tikva</string>
    <string name="city46">Tsfat</string>
    <string name="city47">Kiryat Ono</string>
    <string name="city48">Kiryat Ata</string>
    <string name="city49">Kiryat Bialik</string>
    <string name="city50">Kiryat Gat</string>
    <string name="city51">Kiryat Yam</string>
    <string name="city52">Kiryat Motzkin</string>
    <string name="city53">Kiryat Malachi</string>
    <string name="city54">Kiryat Shemone</string>
    <string name="city55">Rosh Ha\'ayin</string>
    <string name="city56">Rishon Lezion</string>
    <string name="city57">Rahat</string>
    <string name="city58">Rehovot</string>
    <string name="city59">Ramla</string>
    <string name="city60">Ramat-Gan</string>
    <string name="city61">Ramat Hasharon</string>
    <string name="city62">Raanana</string>
    <string name="city63">Sderot</string>
    <string name="city64">Tel Aviv</string>
    <string name="Unsubscribe">Unsubscribe</string>
    <string name="Registration_canceled">Registration canceled</string>
    <string name="Registration_done">Registration done</string>
    <string name="quotafull">The quota is full</string>
    <string name="favorite">Favorite</string>
    <string name="all_groups">All groups</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="group_not_added">Group was not added</string>
    <string name="torah">Torah</string>
    <string name="Prayer_blessings">Prayer and Blessings</string>
    <string name="cosher">Cosher</string>
    <string name="holiday_shabat">Holiday and Shabat</string>
    <string name="mourning">Mourning</string>
    <string name="marriage_family">Marriage and Family</string>
    <string name="faith">Faith</string>
    <string name="delete">"Delete "</string>
    <string name="from_fav_group">" from fav group?"</string>
    <string name="sure_add">Sure add</string>
    <string name="group_to_fav">group to fav?</string>

    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="ask_ques">Ask halakhic questions and answer your questions</string>
    <string name="you_can">You can set Torah lessons and join other classes</string>
    <string name="build_profile_join">Build a profile to join us</string>
    <string name="build_profile">Build Profile</string>
    <string name="regist_to_add_to_fav">register to add to favorites</string>
    <string name="regist_to_start_chat">Register to start chat</string>

    <string name="slide_to_delete">Slide to delete lesson</string>
    <string name="press_to_edit">Press to edit lesson</string>
    <string name="add_new_lesson">Add a new lesson</string>
    <string name="lesson_topic">Lesson topic</string>
    <string name="lesson_rabbi_name">Rabbi name</string>
    <string name="lesson_location">Location</string>
    <string name="lesson_participants">Participants number</string>
    <string name="edit_lesson">Edit lesson</string>
    <string name="post">Post</string>
    <string name="cancle">Cancel</string>
    <string name="lesson_added">Lesson added to list</string>
    <string name="save_changes">Save changes</string>
    <string name="sure_delete_lesson">Are you sure you want to delete the lesson?</string>
    <string name="lesson_deleted">Lesson deleted</string>
    <string name="lesson_update">Lesson update</string>
    <string name="Regist_add_lesson">Register  to add a lesson</string>
    <string name="register_to_display">Register to display your lessons</string>
    <string name="register_to_registeLesoon">Register to register the lesson</string>
    <string name="all_groups_torah">All groups- Torah</string>
    <string name="all_groups_prayer_blassing">All groups- Prayers and Blassing</string>
    <string name="all_groups_cosher">All groups- Cosher</string>
    <string name="all_groups_holidayShabat">All groups- Holiday and Shabat</string>
    <string name="all_groups_mouring">All groups- Mouring</string>
    <string name="all_groups_marrigeFamily">All groups- Marrige and Family</string>
    <string name="all_groups_faite">All groups- Faite</string>
    <string name="filter">Filter</string>
    <string name="choose_category">Choose your category</string>
    <string name="all_lesson">All lessons</string>
    <string name="lesson_created">Lessons I created</string>
    <string name="lesson_registered">Lessons I registered</string>
    <string name="back">Back</string>
    <string name="no_lessons_created">No lessons created</string>
    <string name="no_lessons_registered">No registered lessons</string>
    <string name="connect_us">Connect us</string>
    <string name="to_start_chats">To have a conversation and start asking question</string>
    <string name="no_chats">No chats</string>
    <string name="no_lessons">No lessons</string>

</resources>
