<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/choose_category"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/radio_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_groups"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/all_groupsRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/torah"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/torahRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Prayer_blessings"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/prayeBlassingrRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cosher"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/cosherRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holiday_shabat"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/holiday_shabatRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mourning"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/mourningRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marriage_family"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/marriage_familyRB"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faith"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/faithRB"/>


    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="0.5in"
            android:layout_height="0.5in"
            android:src="@drawable/quuestion_clean"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/filter"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_shape"
            android:id="@+id/done_filter_bt"/>

        <ImageView
            android:layout_width="0.5in"
            android:layout_height="0.5in"
            android:src="@drawable/quuestion_clean"/>

    </LinearLayout>

</LinearLayout>