<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:layout_height="match_parent"
    tools:context=".Activities.StartActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="156dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ask_banner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_gravity="center_horizontal"
        android:textColor="#000"
        android:textSize="35sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_how_continue"
        android:layout_gravity="center_horizontal"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="187dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/hat_rab"
        android:text="@string/login"
        android:textColor="@color/dark_orange"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registerBTN"
        android:layout_width="187dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/hat_rab"
        android:text="@string/register"
        android:textColor="@color/dark_orange"
        android:textSize="20sp" />

    <Button
        android:layout_width="187dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/dark_orange"
        android:background="@drawable/hat_rab"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:id="@+id/guestBTN"
        android:text="@string/guest"/>

</LinearLayout>