<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="156dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ask_banner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_register"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        app:met_floatingLabel="normal"
        android:textColor="@color/black"
        app:met_textColorHint="@color/black"
        android:hint="@string/username_st"
        android:drawableStart="@drawable/ic_username_black_24dp"
        android:drawablePadding="10dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_register"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        app:met_floatingLabel="normal"
        android:textColor="@color/black"
        app:met_textColorHint="@color/black"
        android:hint="@string/email_st"
        android:drawableStart="@drawable/ic_email_icon_black_24dp"
        android:drawablePadding="10dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password1_register"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        app:met_floatingLabel="normal"
        android:textColor="@color/black"
        app:met_textColorHint="@color/black"
        android:hint="@string/password_st"
        android:drawableStart="@drawable/ic_password_black_24dp"
        android:drawablePadding="10dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password2_register"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        app:met_floatingLabel="normal"
        android:textColor="@color/black"
        app:met_textColorHint="@color/black"
        android:hint="@string/confirm_password_st"
        android:drawableStart="@drawable/ic_password_black_24dp"
        android:drawablePadding="10dp"/>

    <Button
        android:layout_width="246dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_shape_dark_grey"
        android:text="@string/register"
        android:id="@+id/btn_register"
        android:textColor="#fff"
        android:textSize="25dp"/>



</LinearLayout>