<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/grey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:text="@string/add_new_lesson"
        android:id="@+id/title_dialog"
        android:textColor="@color/colorPrimary"
        android:autoSizeTextType="uniform"
        android:padding="5dp"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/lesson_topic"
            android:gravity="center"
            android:id="@+id/topic_txt"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/lesson_rabbi_name"
            android:gravity="center"
            android:id="@+id/rabbi_txt"/>
    </com.google.android.material.textfield.TextInputLayout>


    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:hint="@string/location"
        android:gravity="center"
        android:id="@+id/location_txt"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:inputType="number"
            android:hint="@string/lesson_participants"
            android:gravity="center"
            android:id="@+id/max_txt"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="8dp"
            android:text="@string/date"
            android:textSize="0.14in"
            android:background="@drawable/btn_shape"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="date"
            android:padding="15dp"
            android:text="dd/mm/yyyy"
            android:textColor="#000"
            android:textSize="17dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="8dp"
            android:text="@string/time"
            android:textSize="0.14in"
            android:background="@drawable/btn_shape"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="time"
            android:padding="8dp"
            android:text="00:00"
            android:textColor="#000" />

    </LinearLayout>


</LinearLayout>