<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="156dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ask_banner" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            android:hint="@string/your_email"
            android:drawableStart="@drawable/ic_email_icon_black_24dp"

            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetPass"
            android:id="@+id/btn_reset"
            android:textColor="#fff"
            android:background="@drawable/btn_shape_dark_grey"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:text="@string/resetPasswordSt"/>

    </LinearLayout>

</LinearLayout>